# AVROS

./: CLAUDE.md  avros.repos
docs/: AVROS_PERCEPTION_INTEGRATION.md  nav2_route_integration_report.tex
scripts/: diagnose_sim.py
src/avros_bringup/: package.xml
src/avros_bringup/config/: cpp_campus_graph.geojson  nav2_params.yaml  nav2_params_humble.yaml  navigate_route_graph.xml  navsat.yaml
src/avros_bringup/launch/: localization.launch.py  navigation.launch.py  sensors.launch.py
src/avros_navigation/scripts/: generate_graph.py
src/avros_perception/: package.xml  setup.cfg  setup.py
src/avros_perception/avros_perception/: detections_to_obstacles.py  seg_demo_node.py
src/avros_perception/launch/: perception.launch.py
src/avros_perception/resource/: avros_perception
src/avros_sim/: setup.py
src/avros_sim/avros_sim/: avros_vehicle_driver.py
src/avros_sim/config/: nav2_sim_overrides.yaml
src/avros_sim/launch/: sim_navigation.launch.py
src/avros_sim/resource/: avros_webots.urdf
src/avros_sim/worlds/: cpp_campus.wbt
