<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avros_bringup</name>
  <version>0.0.0</version>
  <description>Launch files, URDF, and configuration for AVROS</description>
  <maintainer email="avlab@cpp.edu">AV Lab</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <exec_depend>avros_control</exec_depend>
  <exec_depend>avros_navigation</exec_depend>
  <exec_depend>avros_perception</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>avros_webui</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
